--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "qq-guild-bot",
-  "version": "2.9.4",
-  "description": "QQ频道机器人NodeSDK",
+  "name": "qb-sdk",
+  "version": "1.0.0",
+  "description": "基于QQ官方node sdk的改版",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
@@ -11,7 +11,8 @@
     "qq",
     "channel",
     "guild",
-    "bot"
+    "bot",
+    "group"
   ],
   "files": [
     "es",
@@ -53,7 +54,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@rollup/plugin-replace": "^3.0.0",
-    "@types/jest": "^27.0.2",
+    "@types/jest": "^27.5.2",
     "@types/lodash.assignin": "^4.2.6",
     "@types/ws": "^8.2.0",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
@@ -73,6 +74,7 @@
     "jest": "^25.3.0",
     "lint-staged": "^11.1.2",
     "lodash.clonedeep": "^4.5.0",
+    "node": "^22.5.1",
     "prettier": "^2.3.2",
     "readline-sync": "^1.4.10",
     "rimraf": "^3.0.2",
@@ -84,6 +86,7 @@
   },
   "dependencies": {
     "loglevel": "^1.8.0",
+    "node-color-log": "^12.0.1",
     "resty-client": "0.0.5",
     "ws": "^7.4.4"
   },
@@ -93,11 +96,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tencent-connect/bot-node-sdk.git"
+    "url": "https://github.com/hanasa2023/qb-sdk.git"
   },
-  "author": "joyqwang",
+  "author": "hanasaki",
   "license": "MIT",
-  "homepage": "",
+  "homepage": "https://github.com/hanasa2023/qb-sdk#readme",
+  "bugs": {
+    "url": "https://github.com/hanasa2023/qb-sdk/issues"
+  },
   "lint-staged": {
     "src/**/*.ts?(x)": [
       "eslint --fix",
